# ai-cli-complete-notify

./: .env.example  .gitignore  README.md  README_ja.md  README_ko.md  README_zh-TW.md  README_zh.md  config.example.json  feishu-notify.js  package-lock.json  package.json  vite.config.ts
.github/scripts/: generate-star-history.mjs
.github/workflows/: star-history.yml
assets/star-history/: .star-history.sig
desktop/: main.js  preload.js
desktop/renderer/: index.html  renderer.js  style.css
docs/superpowers/specs/: 2026-07-15-github-release-update-check-design.md  2026-07-18-contributors-wall-design.md
src/: cli.js  config.js  default-config.js  engine.js  env-setup.js  hook-context.js  hooks.js  paths.js  summary.js  watch.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-ui/: App.tsx
src-ui/components/: AboutProjectPanel.tsx  ChannelsPanel.tsx  HooksPanel.tsx  SourcesPanel.tsx  SummaryPanel.tsx  TestPanel.tsx  WatchPanel.tsx
src-ui/hooks/: useHooks.ts  useWatch.ts
src-ui/i18n/: en.json  zh-CN.json
src-ui/lib/: types.ts  update-check.mts
src/notifiers/: desktop.js  email.js  gotify.js  sound.js  webhook.js
tests/: about-project-ui.test.js  build-sidecar.test.js  claude-sdk-session-filter.test.js  engine-hybrid-routing.test.js  gotify-notification.test.js  update-check.test.js  watch-gemini-content-reset.test.js
tools/: build-sidecar.js  generate-icons.py  pack-tauri-portable.js  pack.js  postdist.js  run-tauri-build.js
