[package]
name = "ai-cli-complete-notify"
version = "2.0.0"
description = "AI CLI task completion notification tool"
authors = [""]
edition = "2021"

[lib]
name = "ai_cli_complete_notify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
